--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,7 @@ set(CMAKE_AUTOUIC ON)
 option(ENABLE_TESTING "" OFF)
 list(APPEND CMAKE_PREFIX_PATH "C:/Qt/6.3.2/msvc2019_64/lib/cmake")
 
-find_package(Qt6 COMPONENTS Core)
-find_package(Qt6 COMPONENTS Gui)
-find_package(Qt6 COMPONENTS Qml)
-find_package(Qt6 COMPONENTS Quick)
-find_package(Qt6 COMPONENTS Widgets)
-find_package(Qt6 COMPONENTS Test)
+find_package(Qt6 COMPONENTS REQUIRED Core)
+find_package(Qt6 COMPONENTS REQUIRED Gui)
+find_package(Qt6 COMPONENTS REQUIRED Qml)
+find_package(Qt6 COMPONENTS REQUIRED Quick)
