--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,23 +1,27 @@
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Sql)
 set(APP_NAME ${PROJECT_NAME})
-
-qt_add_executable(${APP_NAME}
-	main.cpp
-	rdsessionmodel.cpp
-	rdsessionmodel.h
-	rdserver.h 
+set(HEADERS 
+	sessionsqlmodel.h 
+	session.h 	
+	errorlogic.h 	
 	interfaces.h
-	rdserver.cpp
-	app.qrc
+)
+set(APP_SOURCES
+	main.cpp
+	sessionsqlmodel.cpp
+	session.cpp
+	errorlogic.cpp 	
 	qml/qml.qrc
 )
-
+QT_ADD_EXECUTABLE(${APP_NAME} ${APP_SOURCES})
+target_precompile_headers(${APP_NAME} PUBLIC ${HEADERS})
 target_link_libraries(${APP_NAME} PRIVATE 
 	Qt::Core
 	Qt::Gui 
 	Qt::Qml 
+	Qt::Sql
 	Qt::Quick
-	qml_module
+	
 )
 target_include_directories(${APP_NAME}
 	PUBLIC
@@ -25,15 +29,21 @@ target_include_directories(${APP_NAME}
 	PRIVATE
 	${CMAKE_CURRENT_BINARY_DIR}
 )
-get_target_property(_qmake_executable Qt6::qmake IMPORTED_LOCATION)
-get_filename_component(_qt_bin_dir "${_qmake_executable}" DIRECTORY)
-find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")
-find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
-add_custom_command(TARGET ${APP_NAME} POST_BUILD
-        COMMAND "${CMAKE_COMMAND}" -E
-        env PATH="${_qt_bin_dir}" "${WINDEPLOYQT_EXECUTABLE}"
-        "$<TARGET_FILE:${APP_NAME}>"
-        COMMENT "Running windeployqt...")
-set(APP_SOURCE ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "Path to app source")
+
+set(APP_LIB_SOURCES ${APP_SOURCES})
+list(REMOVE_ITEM APP_LIB_SOURCES main.cpp)
+#lib for tests
+QT_ADD_LIBRARY(APP_LIB STATIC ${APP_LIB_SOURCES})
+target_precompile_headers(APP_LIB REUSE_FROM ${APP_NAME})
+target_link_libraries(APP_LIB PUBLIC 
+	Qt::Core
+	Qt::Gui 
+	Qt::Qml 
+	Qt::Sql
+	Qt::Quick
+	
+)
+
+set(APP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Path to app source")
 
 add_subdirectory(qml)
